--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 <body>
   <div class="all">
     <div class="card">
-      <img class="img1" src="./images/image-equilibrium.jpg" alt="">
+      <img class="img1" src="image-equilibrium.jpg" alt="">
       <h2>Equilibrium #3429</h2>
       <p>Our Equilibrium collection promotes blance and calm.</p>
 
       <div id="it1">
-        <img src="./images/icon-ethereum.svg" alt="">
+        <img src="icon-ethereum.svg" alt="">
         <span class="s1">0.041 ETH</span>
       <svg width="17" height="17" xmlns="http://www.w3.org/2000/svg">
         <path d="M8.305 2.007a6.667 6.667 0 1 0 0 13.334 6.667 6.667 0 0 0 0-13.334Zm2.667 7.334H8.305a.667.667 0 0 1-.667-.667V6.007a.667.667 0 0 1 1.334 0v2h2a.667.667 0 0 1 0 1.334Z"fill="#8BACD9" />
@@ -121,7 +121,7 @@
     <div id="hr"></div>
 
     <div class="authour">
-      <img src="./images/image-avatar.png" alt="avatar">
+      <img src="image-avatar.png" alt="avatar">
       <p>Creation of<span> Jules Wyver</span></p>
     </div>
 
